--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -1,4 +1,34 @@
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     letter-spacing: -0.25px;
+    font-size: 175%;
+}
+
+.backtext {
+    color: #ffffff;
+    text-shadow: 1px 1px 1px #080808;
+}
+
+.thumbnail, .thumbnail:hover {
+    border: none !important;
+}
+
+.section {
+    -webkit-box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
+    -moz-box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
+    box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
+    padding-top: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+#navigation-bar {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
+}
+
+#map-canvas {
+    height: 550px;
 }
