Changed top image into a carousel-style presentation

--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -7,6 +7,8 @@ body {
 .backtext {
     color: #ffffff;
     text-shadow: 1px 1px 1px #080808;
+    text-align: left;
+    background: none;
 }
 
 .thumbnail, .thumbnail:hover {
