Changed Google Map layout to occupy a single column for accessibility, and added a description for the blog post featurette.

--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -11,14 +11,21 @@ body {
     background: none;
 }
 
+.backtext-dark {
+    color: #000000;
+    text-shadow: 1px 1px 1px #bdbdbd;
+    text-align: left;
+    background: none;
+}
+
 .thumbnail, .thumbnail:hover {
     border: none !important;
 }
 
 .section {
-    -webkit-box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
-    -moz-box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
-    box-shadow: inset 0px 0px 10px 4px rgba(0,0,0,0.55);
+    -webkit-box-shadow: inset 0px 0px 10px 4px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: inset 0px 0px 10px 4px rgba(0, 0, 0, 0.55);
+    box-shadow: inset 0px 0px 10px 4px rgba(0, 0, 0, 0.55);
     padding-top: 300px;
     background-size: cover;
     background-position: center;
