Added optimizeLegibility tag (this is a thing!) and increased font size from 130% to 150%

--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     letter-spacing: -0.60px;
-    font-size: 130%;
+    font-size: 150%;
+    text-rendering: optimizeLegibility;
 }
 
 .backtext {
