--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -6,7 +6,8 @@ body {
     padding-bottom: 50px;
 }
 .navbar-brand {
-    font-family: 'Open Sans Semibold', Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-weight: 600;
 }
 
 .navbar-toggle .icon-bar {
