--- a/Home/_includes/header.html
+++ b/Home/_includes/header.html
@@ -10,12 +10,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ Parish</a>
+                <a class="navbar-brand" href="/">Transfiguration of Christ Parish</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-links">
                 <ul class="nav navbar-nav">
-                    <li><a href="http://www.ourtransfi.org/lent2015/">Lent 2015</a></li>
-                    <li><a href="http://www.ourtransfi.org/wordoflife">Word of Life</a></li>
+                    <li><a href="/lent2015">Lent 2015</a></li>
+                    <li><a href="/wordoflife">Word of Life</a></li>
                 </ul>
             </div>
         </div>
