Added Easter greeting.

--- a/Home/_includes/comp-carousel.html
+++ b/Home/_includes/comp-carousel.html
@@ -12,11 +12,11 @@
 <div class="carousel-inner" role="listbox" id="whats-new">
 
     <div class="item section active"
-         style="background-image: url('/images/header-holyweek.jpg'); padding-top: 750px">
+         style="background-image: url('/images/header-holyweek.png'); padding-top: 750px">
         <a href="#schedules">
             <div class="carousel-caption jumbotron backtext">
-                <h1>Holy Week</h1>
-                <p> Holy Thursday, Good Friday and Black Saturday schedules here. </p>
+                <h1>Happy Easter to Everyone!</h1>
+                <p>We are an Easter people, and Alleluia is our song!</p>
             </div>
         </a>
     </div>
