--- a/Home/_includes/header.html
+++ b/Home/_includes/header.html
@@ -14,7 +14,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-links">
                 <ul class="nav navbar-nav">
-                    <li><a href="/lent2015">Lent 2015</a></li>
+                    <li><a href="/calendar">Calendar</a></li>
                     <li><a href="/wordoflife">Word of Life</a></li>
                 </ul>
             </div>
