Applied the GNU AGPLv3 license on the project, updated README contents and instructions, and added a footer note for GPL compliance and copyright.

--- a/Home/_includes/footer.html
+++ b/Home/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="site-footer">
     <!-- Footer -->
-    <!--<div class="container-fluid" id="footer" style="text-align: center">-->
-    <!--Made using Bootstrap-->
-    <!--</div>-->
+    <div class="container-fluid" id="footer" style="text-align: center">
+    Copyright © 2015 Transfiguration of Christ Parish.
+        <br />Source is available at <a href="https://www.github.com/jerieljan/ourtransfi">GitHub.</a>
+    </div>
 
     <!-- /container -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
