Added Santo Rosaryo visit.

--- a/Home/_includes/comp-carousel.html
+++ b/Home/_includes/comp-carousel.html
@@ -12,6 +12,19 @@
 <div class="carousel-inner" role="listbox" id="whats-new">
 
     <div class="item section active"
+         style="background-image: url('/images/header-santorosaryo.jpg'); padding-top: 750px">
+        <a href="#schedules">
+            <div class="carousel-caption jumbotron backtext col-sm-4">
+                <h1>Pagdalaw ng Nuestra Senora del Santissimo Rosario, La Naval de Manila</h1>
+                <p>Salubungin natin ang Reyna...
+                <br/>sa Transfiguration Christ of Parish
+                <br/> Ika-10 hanggang Ika-17 ng Mayo 2015.</p>
+
+            </div>
+        </a>
+    </div>
+
+    <div class="item section"
          style="background-image: url('/images/header-holyweek.png'); padding-top: 750px">
         <a href="#schedules">
             <div class="carousel-caption jumbotron backtext">
@@ -28,16 +41,6 @@
             <h1>The Transfiguration<br/>of Christ Parish</h1>
             <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
         </div>
-    </div>
-    <div class="item section"
-         style="background-image: url('/images/yearofthepoor/header.jpg'); padding-top: 750px">
-        <!-- Slide - Simbang Gabi Schedules -->
-        <a href="yearofthepoor/">
-            <div class="carousel-caption jumbotron backtext col-md-5">
-                <h1>The Year of the Poor 2015</h1>
-                <p>A message from the CBCP. Click here to read more.</p>
-            </div>
-        </a>
     </div>
 </div>
 
