Fixed typo on carousel and adjusted bounding div based on screen size.

--- a/Home/_includes/comp-carousel.html
+++ b/Home/_includes/comp-carousel.html
@@ -14,11 +14,11 @@
     <div class="item section active"
          style="background-image: url('/images/header-santorosaryo.jpg'); padding-top: 750px">
         <a href="#schedules">
-            <div class="carousel-caption jumbotron backtext col-sm-4">
+            <div class="carousel-caption jumbotron backtext col-sm-8 col-md-6 col-lg-4">
                 <h1>Pagdalaw ng Nuestra Senora del Santissimo Rosario, La Naval de Manila</h1>
                 <p>Salubungin natin ang Reyna...
-                <br/>sa Transfiguration Christ of Parish
-                <br/> Ika-10 hanggang Ika-17 ng Mayo 2015.</p>
+                <br/>sa Transfiguration of Christ Parish
+                <br/>Ika-10 hanggang Ika-17 ng Mayo 2015.</p>
 
             </div>
         </a>
