Added CSS-transitions globally (with fixes), and fixed events layout in medium+ screens.

--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -5,6 +5,15 @@ body {
     text-rendering: optimizeLegibility;
     padding-bottom: 0;
 }
+
+* {
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -ms-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+}
+
 .navbar-brand {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     font-weight: 600;
@@ -50,6 +59,10 @@ body {
 
 #map-canvas {
     height: 550px;
+}
+
+.nav>li {
+    border-bottom: 5px solid #fff;
 }
 
 .nav .active {
