Removed code references to La Naval de Manila. Maraming salamat po sa pagbisita!

--- a/Home/_includes/event-highlight.html
+++ b/Home/_includes/event-highlight.html
@@ -1,4 +1,4 @@
-<h3>Event: La Naval de Manila</h3>
+<h3>La Naval de Manila</h3>
 <div id="fb-root"></div>
 <script>(function (d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
