--- a/Home/_includes/header.html
+++ b/Home/_includes/header.html
@@ -1,37 +1,6 @@
 <header class="site-header">
-
-    <div class="navbar navbar-fixed-top" role="navigation" id="navigation-bar">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Transfiguration of Christ Parish</a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-links">
-                <ul class="nav navbar-nav">
-                    <li><a href="/calendar">Calendar</a></li>
-                    <li><a href="/wordoflife">Word of Life</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="jumbotron section" id="section-1" style="{{ page.style }}">
-        <div class="container backtext">
-            <div class="col-md-12">
-                <h1>{{ page.title }}</h1>
-
-                <p>{{ page.subtext }}</p>
-            </div>
-        </div>
-
-    </div>
+    {% include header-navigation.html %}
+    {% include header-heading.html %}
 
     {% if page.css %}
     <link rel="stylesheet" href="/css/{{ page.css }}">
