--- a/Home/_includes/header-navigation.html
+++ b/Home/_includes/header-navigation.html
@@ -12,8 +12,30 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
-                <li><a href="/calendar">Calendar</a></li>
-                <li><a href="/wordoflife">Word of Life</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Liturgical Services<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="/services/#baptism">Baptism</a> </li>
+                        <li><a href="/services/#reconciliation-confession">Reconciliation (Confession)</a> </li>
+                        <li><a href="/services/#confirmation">Confirmation</a> </li>
+                        <li><a href="/services/#eucharist">Eucharist (Mass Schedules)</a> </li>
+                        <li><a href="/services/#anointing-of-the-sick">Anointing of the Sick</a> </li>
+                        <li><a href="/services/#matrimony-weddings">Matrimony (Weddings)</a> </li>
+                        <li><a href="/services/matrimony/" style="margin-left: 32px;">Wedding Reminders and Guidelines</a> </li>
+                        <li><a href="/services/matrimony/#requirements" style="margin-left: 32px;">Requirements</a> </li>
+                        <li><a href="/services/matrimony/#schedules" style="margin-left: 32px;">Schedules</a> </li>
+                        <li><a href="/services/matrimony/#wedding-rates" style="margin-left: 32px;">Wedding Rates</a> </li>
+                        <li><a href="/services/#holy-orders">Holy Orders</a> </li>
+                        <li><a href="/services/#sacramentals-and-devotions">Blessings</a> </li>
+                        <li><a href="/services/#schedule-of-devotions">Devotions</a> </li>
+                    </ul>
+                </li>
+                <!--<li><a href="/columbarium">Columbarium</a></li>-->
+                <!--<li><a href="/ministries">Ministries</a> </li>-->
+                <!--<li><a href="/formation">Formation</a> </li>-->
+                <li><a href="/downloads">Downloads</a> </li>
+                <!--<li><a href="/gallery">Gallery</a></li>-->
+
             </ul>
         </div>
     </div>
