--- a/Home/_includes/header-navigation.html
+++ b/Home/_includes/header-navigation.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top" role="navigation" id="navigation-bar">
+<div class="navbar" role="navigation" id="navigation-bar">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
