--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -4,6 +4,7 @@ body {
     font-size: 150%;
     text-rendering: optimizeLegibility;
     padding-bottom: 0;
+    padding-top: 0;
 }
 
 * {
@@ -12,6 +13,10 @@ body {
     -ms-transition: all 500ms ease-in-out;
     -o-transition: all 500ms ease-in-out;
     transition: all 500ms ease-in-out;
+}
+
+.navbar {
+    margin-bottom: 0px;
 }
 
 .navbar-brand {
@@ -52,9 +57,6 @@ body {
 
 #navigation-bar {
     background-color: #ffffff;
-    -webkit-box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
-    -moz-box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
-    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
 }
 
 #map-canvas {
