Added the accented class which represents blocks with the accent color and white for text.
This change was introduced so that the useful links in the main page are emphasized.

--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -80,6 +80,20 @@ body {
     color: #989898;
 }
 
+.accented {
+    background-color: #428bca;
+    color: #fff;
+}
+
+.accented a {
+    color: #fff;
+}
+
+.accented a:hover {
+    color:#fff;
+}
+
+
 .attribution {
     font-size: 10px;
     font-style: italic;
