Fixed Facebook Open Graph Metadata from displaying just the base page details
og:url was changed to adapt to the current page based on the permalink tag (Facebook kept jumping back to the base because the URL was constant) and tags were fixed for relative urls (icon) and correct tags (subtext --> description)

--- a/Home/_includes/head.html
+++ b/Home/_includes/head.html
@@ -13,9 +13,9 @@
     <meta property="og:title"
           content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
     <meta property="og:site_name" content="{{ site.title }}"/>
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="{{ site.url }}{%if page.permalink %}{{ page.permalink }}{% endif %}">
     <meta property="og:description"
-          content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
+          content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
     {% if page.icon %}
     <meta property="og:image" content="http://www.ourtransfi.org{{ page.icon }}"/>
     {% endif %}
