--- a/Home/_includes/footer.html
+++ b/Home/_includes/footer.html
@@ -3,6 +3,7 @@
     <div class="container-fluid" id="footer" style="text-align: center">
     Copyright © 2015 Transfiguration of Christ Parish.
         <br />Source is available at <a href="https://www.github.com/jerieljan/ourtransfi">GitHub.</a>
+        <br /><a href="https://docs.google.com/forms/d/1bcRaDoSqWHgCidTGAnh9fdaTDqOHCbsFS7OrBlSUNXE/viewform?usp=send_form">Feedback Form</a>
     </div>
 
     <!-- /container -->
