--- a/Home/_includes/header-navigation.html
+++ b/Home/_includes/header-navigation.html
@@ -32,7 +32,13 @@
                 </li>
                 <!--<li><a href="/columbarium">Columbarium</a></li>-->
                 <!--<li><a href="/ministries">Ministries</a> </li>-->
-                <!--<li><a href="/formation">Formation</a> </li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Formation<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="/formation/">Formation Home</a> </li>
+                        <li><a href="/formation/posts/year-of-the-poor-2015/" style="margin-left: 32px">Year of the Poor</a> </li>
+                    </ul>
+                </li>
                 <li><a href="/downloads">Downloads</a> </li>
                 <!--<li><a href="/gallery">Gallery</a></li>-->
 
