Article body margins increased.
Container sizes now occupy only an md-8 instead of an md-12.

--- a/Home/_layouts/default-md.html
+++ b/Home/_layouts/default-md.html
@@ -9,7 +9,7 @@ layout: base
 
 {% include header.html %}
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-sm-12">
+    <div class="col-sm-12 col-md-8 col-md-offset-2">
         {{ content }}
     </div>
 </div>
