Removed excess border leftovers in the navigation bar, and condensed heading-logo for smaller screens.

--- a/Home/_includes/header-navigation.html
+++ b/Home/_includes/header-navigation.html
@@ -8,7 +8,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Transfiguration of Christ Parish</a>
+            <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/">Transfiguration of Christ</a>
+            <a class="navbar-brand hidden-xs" href="/">Transfiguration of Christ Parish</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
