--- a/Home/css/ourtransfi.css
+++ b/Home/css/ourtransfi.css
@@ -40,6 +40,7 @@ h3 {
 
 .navbar {
     margin-bottom: 0px;
+    border-bottom: 0px;
 }
 
 .navbar-brand {
@@ -87,11 +88,11 @@ h3 {
 }
 
 .nav>li {
-    border-bottom: 5px solid #fff;
+    /*border-bottom: 5px solid #fff;*/
 }
 
 .nav .active {
-    border-bottom: 5px solid #428bca;
+    /*border-bottom: 5px solid #428bca;*/
     /*background-color: #a2c5b4;*/
 }
 
