Added basic (first time!) continuous integration support through Travis
- Gemfile added for dependencies.
- Travis YML added for configuration
- Added Build script for running bundler and building with Jekyll
- Moved Sync script to the new scripts directory
- Added more comments for usage.

--- a/Home/_includes/footer.html
+++ b/Home/_includes/footer.html
@@ -2,8 +2,8 @@
     <!-- Footer -->
     <div class="container-fluid" id="footer" style="text-align: center">
     Copyright © 2015 Transfiguration of Christ Parish.
-        <br />Source is available at <a href="https://www.github.com/jerieljan/ourtransfi">GitHub.</a>
-        <br /><a href="https://docs.google.com/forms/d/1bcRaDoSqWHgCidTGAnh9fdaTDqOHCbsFS7OrBlSUNXE/viewform?usp=send_form">Feedback Form</a>
+        <br />Source is available at <a href="https://www.github.com/jerieljan/ourtransfi">GitHub</a>, built using Jekyll.
+        <br /><a href="https://docs.google.com/forms/d/1bcRaDoSqWHgCidTGAnh9fdaTDqOHCbsFS7OrBlSUNXE/viewform?usp=send_form">Site Feedback</a>
     </div>
 
     <!-- /container -->
