Added a special feature about Our Lady of Czestochowa
- Markdown, images, assets and CSS included.
- Index has been updated with a snippet about Czestochowa.
- Adjusted navbar to always render in white, in order to change body colours in feature pages.
- Added a carousel page for Our Lady of Czestochowa

--- a/Home/_includes/comp-carousel.html
+++ b/Home/_includes/comp-carousel.html
@@ -1,7 +1,13 @@
+<!-- When adding new entries, consider:
+  - Adding a carousel indicator
+  - Adding a section below (and adjust active class or not)
+  -->
+
 <!-- Carousel Indicators -->
 
 <ol class="carousel-indicators">
     <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
+    <li data-target="#transfi-carousel-1" data-slide-to="1" ></li>
 </ol>
 
 
@@ -17,6 +23,18 @@
             <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
         </div>
     </div>
+
+    <div class="item section"
+         style="background-image: url('/pages/about/czestochowa/Czestochowa4.jpg'); padding-top: 750px">
+        <!-- Slide - Parish Highlight -->
+        <a href="/about/czestochowa/">
+        <div class="carousel-caption jumbotron backtext">
+            <h1>Our Lady of Czestochowa</h1>
+            <p>About Our Lady of Czestochowa, its origins, and as the Special Patroness of the Transfiguration of Christ Parish</p>
+        </div>
+        </a>
+    </div>
+
 </div>
 
 <!-- Carousel Controls -->
