--- a/Home/_layouts/default-md.html
+++ b/Home/_layouts/default-md.html
@@ -8,7 +8,7 @@ layout: base
 <![endif]-->
 
 {% include header.html %}
-<div class="container" style="padding-bottom: 32px">
+<div class="container" id="main-content" style="padding-bottom: 32px">
     <div class="col-sm-12 col-md-8 col-md-offset-2">
         {{ content }}
     </div>
