Fixed images in Markdown pages from breaking responsiveness
The fix was applied by adding a Markdown-only CSS file that fixes images under main-content.
This fix applies to both Czestochowa and Year of the Poor feature pages.

--- a/Home/_layouts/default-md.html
+++ b/Home/_layouts/default-md.html
@@ -8,6 +8,7 @@ layout: base
 <![endif]-->
 
 {% include header.html %}
+<link rel="stylesheet" href="/css/md.css">
 <div class="container" id="main-content" style="padding-bottom: 32px">
     <div class="col-sm-12 col-md-8 col-md-offset-2">
         {{ content }}
