--- a/Home/_includes/head.html
+++ b/Home/_includes/head.html
@@ -34,4 +34,5 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
     <link rel="stylesheet" href="/css/ourtransfi.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
