Added the 360° tour, added links to BrideWorthy and a navigation link.

--- a/Home/_includes/header-navigation.html
+++ b/Home/_includes/header-navigation.html
@@ -31,6 +31,7 @@
                         <li><a href="/services/#schedule-of-devotions">Devotions</a> </li>
                     </ul>
                 </li>
+                <li><a href="/tour">360° Tour</a></li>
                 <!--<li><a href="/columbarium">Columbarium</a></li>-->
                 <!--<li><a href="/ministries">Ministries</a> </li>-->
                 <li class="dropdown">
