--- a/Home/_includes/comp-carousel.html
+++ b/Home/_includes/comp-carousel.html
@@ -8,6 +8,7 @@
 <ol class="carousel-indicators">
     <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
     <li data-target="#transfi-carousel-1" data-slide-to="1" ></li>
+    <li data-target="#transfi-carousel-1" data-slide-to="2" ></li>
 </ol>
 
 
@@ -16,6 +17,16 @@
 <div class="carousel-inner" role="listbox" id="whats-new">
 
     <div class="item section active"
+         style="background-image: url('/images/header-1.jpg'); padding-top: 750px">
+        <!-- Slide - Parish Highlight -->
+        <div class="carousel-caption jumbotron backtext">
+            <h1>Merry Christmas!</h1>
+            <p>Maligayang Pasko sa inyong lahat!</p>
+        </div>
+    </div>
+
+
+    <div class="item section"
          style="background-image: url('/images/header-0.jpg'); padding-top: 750px">
         <!-- Slide - Parish Highlight -->
         <div class="carousel-caption jumbotron backtext">
