--- a/Home/_includes/head.html
+++ b/Home/_includes/head.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet'
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet'
           type='text/css'>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
